# OASIS

./: oasis-fortune-500.CI
.github/: conda-validation  dependabot.yml
.github/src/oasis/src/oasis/: Makefile  cli.py
.github/src/oasis/src/oasis/tests/: test_cli.py
.github/workflows/: # ==============OASIS-ULTIMATE-CONDA.CI  .gitignore  OASIS-Elite-Production-CI  OASIS-Ultimate.CI  avd-codeql.yml  codeql-adv.yml  codeql.yml  dependabot-auto-merge.yml  elite-autonomous-mode.yml  focused-elite-python.CI  oasis-ci.yml  pyproject.toml  self-healing-ci.yml
.github/workflows/.github/workflows/: oasis-elite-ci.yml  oasis-ultimate-conda.yml
