[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oasis"
version = "0.1.0"
description = "OASIS Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "bandit",
  "pip-audit"
]

[project.scripts]
oasis = "oasis.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
